--- a/plugins/sfForkedDoctrineApplyPlugin/i18n/ru/sfForkedApply.xml
+++ b/plugins/sfForkedDoctrineApplyPlugin/i18n/ru/sfForkedApply.xml
@@ -53,7 +53,7 @@ for a new account.
 Это может быть потому что Вы уже активировали свою учётную запись. Если это так,
 просто нажмите на ссылку "Войти", чтобы войти.
 &lt;/p&gt;&lt;p&gt;
-Другие возможные причины::
+Другие возможные причины:
 &lt;/p&gt;&lt;p&gt;
 1. Если Вы скопировали и вставили URL из
 письма по электронной почте, убедитесь, что Вы сделали это правильно и
